# circuit_ai

./: .gitignore  CMakeLists.txt  new  vcpkg.json
docs/: 代码架构设计.md  需求规格说明书.md
docs/plans/: 2026-04-12-circuit-ai-phase1.md
netlists/: LLC.CIR  buck.sch  imgui.ini  rc_filter.cir  rc_test.sch  rl_circuit.cir  test.sch
src/app/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/circuit/: circuit.h  netlist_parser.cpp  netlist_parser.h
src/backend/common/: ring_buffer.h  sim_types.h
src/backend/components/: base_component.h
src/backend/components/passives/: capacitor.h  inductor.h  resistor.h  transformer.h
src/backend/components/semiconductors/: ideal_diode.h  ideal_switch.h
src/backend/components/sources/: current_source.h  sin_source.h  square_wave_source.h  step_source.h  voltage_source.h
src/backend/engine/: diag.h  mna_solver.cpp  mna_solver.h  simulator.cpp  simulator.h
src/frontend/: CMakeLists.txt
src/frontend/platform/: file_dialog.h  file_dialog_win32.cpp
src/frontend/view_model/: main_view_model.cpp  main_view_model.h  schematic_model.cpp  schematic_model.h  scope_model.cpp  scope_model.h  scrolling_buffer.h
src/frontend/views/: base_view.h  main_view.cpp  main_view.h  palette_view.cpp  palette_view.h  schematic_clipboard_win32.cpp  schematic_clipboard_win32.h  schematic_svg_export.cpp  schematic_svg_export.h  schematic_view.cpp  schematic_view.h  scope_view.cpp  scope_view.h  settings_view.cpp  settings_view.h
